{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 90,
  "lineage": "6ec56607-3a57-b861-5999-8e5765b3536e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f518be11a109f187",
            "arn": "arn:aws:ec2:us-east-1:353203138858:elastic-ip/eipalloc-0f518be11a109f187",
            "domain": "vpc",
            "id": "eipalloc-0f518be11a109f187",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-209-211-108.compute-1.amazonaws.com",
            "public_ip": "3.209.211.108",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Enviroment": "production",
              "Name": "devops-na-nuvem-week-vpc-eip",
              "Project": "devops-na-nuvem-week"
            },
            "tags_all": {
              "Enviroment": "production",
              "Name": "devops-na-nuvem-week-vpc-eip",
              "Project": "devops-na-nuvem-week"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353203138858:internet-gateway/igw-07811e420ddb416c8",
            "id": "igw-07811e420ddb416c8",
            "owner_id": "353203138858",
            "tags": {
              "Enviroment": "production",
              "Name": "devops-na-nuvem-week-vpc-internet-gateway",
              "Project": "devops-na-nuvem-week"
            },
            "tags_all": {
              "Enviroment": "production",
              "Name": "devops-na-nuvem-week-vpc-internet-gateway",
              "Project": "devops-na-nuvem-week"
            },
            "vpc_id": "vpc-01d7fd06116c2c481"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f518be11a109f187",
            "association_id": "eipassoc-0c3e813454aeeb7a9",
            "connectivity_type": "public",
            "id": "nat-08eaebadda2cf6563",
            "network_interface_id": "eni-04bac77f04e5f4f23",
            "private_ip": "10.0.0.42",
            "public_ip": "3.209.211.108",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08c14e7dbeaebe3ae",
            "tags": {
              "Enviroment": "production",
              "Name": "devops-na-nuvem-week-vpc-nat-gateway",
              "Project": "devops-na-nuvem-week"
            },
            "tags_all": {
              "Enviroment": "production",
              "Name": "devops-na-nuvem-week-vpc-nat-gateway",
              "Project": "devops-na-nuvem-week"
            }
          },
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_subnet.publics",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353203138858:route-table/rtb-01dcb9ee0ffcb488b",
            "id": "rtb-01dcb9ee0ffcb488b",
            "owner_id": "353203138858",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08eaebadda2cf6563",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Enviroment": "production",
              "Name": "devops-na-nuvem-week-vpc-private_route_table_name",
              "Project": "devops-na-nuvem-week"
            },
            "tags_all": {
              "Enviroment": "production",
              "Name": "devops-na-nuvem-week-vpc-private_route_table_name",
              "Project": "devops-na-nuvem-week"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d7fd06116c2c481"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_subnet.publics",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353203138858:route-table/rtb-052a845c6824df7a2",
            "id": "rtb-052a845c6824df7a2",
            "owner_id": "353203138858",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07811e420ddb416c8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Enviroment": "production",
              "Name": "devops-na-nuvem-week-vpc-public_route_table_name",
              "Project": "devops-na-nuvem-week"
            },
            "tags_all": {
              "Enviroment": "production",
              "Name": "devops-na-nuvem-week-vpc-public_route_table_name",
              "Project": "devops-na-nuvem-week"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d7fd06116c2c481"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privates",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08fa80e1184244b63",
            "route_table_id": "rtb-01dcb9ee0ffcb488b",
            "subnet_id": "subnet-0ad6e64e4b347f5ba"
          },
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.privates",
            "aws_subnet.publics",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b04882a777349b0f",
            "route_table_id": "rtb-01dcb9ee0ffcb488b",
            "subnet_id": "subnet-010a8fad58e58e8dd"
          },
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.privates",
            "aws_subnet.publics",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4d86752b67b2010",
            "route_table_id": "rtb-052a845c6824df7a2",
            "subnet_id": "subnet-08c14e7dbeaebe3ae"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.publics",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3e0c3577e416eed",
            "route_table_id": "rtb-052a845c6824df7a2",
            "subnet_id": "subnet-0a5354d357893437e"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.publics",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privates",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353203138858:subnet/subnet-0ad6e64e4b347f5ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad6e64e4b347f5ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353203138858",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviroment": "production",
              "Name": "devops-na-nuvem-week-vpc-private-subnet-us-east-1a",
              "Project": "devops-na-nuvem-week"
            },
            "tags_all": {
              "Enviroment": "production",
              "Name": "devops-na-nuvem-week-vpc-private-subnet-us-east-1a",
              "Project": "devops-na-nuvem-week"
            },
            "vpc_id": "vpc-01d7fd06116c2c481"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353203138858:subnet/subnet-010a8fad58e58e8dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010a8fad58e58e8dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353203138858",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviroment": "production",
              "Name": "devops-na-nuvem-week-vpc-private-subnet-us-east-1b",
              "Project": "devops-na-nuvem-week"
            },
            "tags_all": {
              "Enviroment": "production",
              "Name": "devops-na-nuvem-week-vpc-private-subnet-us-east-1b",
              "Project": "devops-na-nuvem-week"
            },
            "vpc_id": "vpc-01d7fd06116c2c481"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353203138858:subnet/subnet-08c14e7dbeaebe3ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c14e7dbeaebe3ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "353203138858",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviroment": "production",
              "Name": "devops-na-nuvem-week-vpc-public-subnet-us-east-1a",
              "Project": "devops-na-nuvem-week"
            },
            "tags_all": {
              "Enviroment": "production",
              "Name": "devops-na-nuvem-week-vpc-public-subnet-us-east-1a",
              "Project": "devops-na-nuvem-week"
            },
            "vpc_id": "vpc-01d7fd06116c2c481"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353203138858:subnet/subnet-0a5354d357893437e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5354d357893437e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "353203138858",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviroment": "production",
              "Name": "devops-na-nuvem-week-vpc-public-subnet-us-east-1b",
              "Project": "devops-na-nuvem-week"
            },
            "tags_all": {
              "Enviroment": "production",
              "Name": "devops-na-nuvem-week-vpc-public-subnet-us-east-1b",
              "Project": "devops-na-nuvem-week"
            },
            "vpc_id": "vpc-01d7fd06116c2c481"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353203138858:vpc/vpc-01d7fd06116c2c481",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0b9e8ec5430a69d23",
            "default_route_table_id": "rtb-03e955b516eeb1069",
            "default_security_group_id": "sg-059857d34406bb9ec",
            "dhcp_options_id": "dopt-0c031449fa4da841f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01d7fd06116c2c481",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03e955b516eeb1069",
            "owner_id": "353203138858",
            "tags": {
              "Enviroment": "production",
              "Name": "devops-na-nuvem-week-vpc",
              "Project": "devops-na-nuvem-week"
            },
            "tags_all": {
              "Enviroment": "production",
              "Name": "devops-na-nuvem-week-vpc",
              "Project": "devops-na-nuvem-week"
            }
          }
        }
      ]
    }
  ]
}